# GPGPU

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
CPU/: bench.py  lbp.py
bench_src/: bench.cc  visu_bench.ipynb
results/bench_step2/: barcode-00-01.csv  log.txt
results/bench_step2_v1/: barcode-00-01.csv  log.txt
results/cpu/TotoLeGPU1_bench/: 1200x1600.prof  1500x2000.prof  1800x2400.prof  2100x2800.prof  2400x3200.prof  2700x3600.prof  3000x4000.prof  300x400.prof  600x800.prof  900x1200.prof
results/cpu/TotoLeGPU2_bench/: 1200x1600.prof  1500x2000.prof  1800x2400.prof  2100x2800.prof  2400x3200.prof  2700x3600.prof  3000x4000.prof  300x400.prof  600x800.prof  900x1200.prof
results/cpu/barcode-00-01_bench/: 1210x1613.prof  1512x2016.prof  1815x2420.prof  2117x2823.prof  2420x3226.prof  2722x3629.prof  3024x4032.prof  303x404.prof  605x807.prof  908x1210.prof
results/cpu/barcode-00-02_bench/: 1210x1613.prof  1512x2016.prof  1815x2420.prof  (+7 more)
results/first_global/: barcode-00-01.csv  log.txt
results/global/: barcode-00-01.csv  barcode-00-02.csv  barcode-00-03.csv  barcode-09-01.csv  barcode-09-02.csv  barcode-09-03.csv  barcode-09-04.csv  barcode-09-05.csv  barcode-10-01.csv  barcode-10-02.csv  barcode-10-03.csv  barcode-10-04.csv  barcode-10-05.csv  log.txt
results/gpu_1/: TotoLeGPU2.csv  barcode-00-01.csv  barcode-00-02.csv  log.txt
results/gpu_step2_v1/: barcode-00-01.csv  barcode-00-02.csv  barcode-00-03.csv  log.txt
results/gpu_v1/: TotoLeGPU1.csv  TotoLeGPU2.csv  barcode-00-01.csv  barcode-00-02.csv  barcode-00-03.csv  barcode-01-01.csv  barcode-DogecoinMiners-01.csv  barcode-DogecoinMiners-02.csv  barcode-DogecoinMiners-03.csv  barcode-DogecoinMiners-04.csv  barcode-DogecoinMiners-05.csv  log.txt
results/very_optimized/: TotoLeGPU1.csv  TotoLeGPU2.csv  barcode-00-01.csv  barcode-00-02.csv  barcode-00-03.csv  barcode-01-01.csv  barcode-DogecoinMiners-01.csv  barcode-DogecoinMiners-02.csv  barcode-DogecoinMiners-03.csv  barcode-DogecoinMiners-04.csv  barcode-DogecoinMiners-05.csv  log.txt
results/very_optimized_fixed/: TotoLeGPU1.csv  TotoLeGPU2.csv  barcode-00-01.csv  barcode-00-02.csv  barcode-00-03.csv  barcode-01-01.csv  barcode-DogecoinMiners-01.csv  barcode-DogecoinMiners-02.csv  barcode-DogecoinMiners-03.csv  barcode-DogecoinMiners-04.csv  barcode-DogecoinMiners-05.csv  log.txt  prof
src/: image.hh  kmeans.py  lbp.cu  lbp.hh  lbp2.cu  lbp3.cu  main.cc  nn.cpp  nn.cu  nn.hh  nn2.cu  utils.hh
(+70 files in other folders)
